# Trade-Pilot

./: .augmentignore  .env.example  .gitignore  README.md  TESTING_RESULTS.md  pyproject.toml
docs/: CLIENT_USAGE.md  EXAMPLES_GUIDE.md  HYPERLIQUID_CLIENT_UPGRADE.md  PROJECT_SUMMARY.md  QUICKSTART.md  TESTING.md  TEST_RESULTS.md
docs/features/: dual-client-support.md  hyperliquid-authentication.md  perpetual-trading.md
examples/: basic_usage.py  test_agent.py  test_auth_methods.py  test_endpoints.py  test_hyperliquid_client.py  test_perp_trading.py  test_sdk_client.py
src/trade_pilot/: __init__.py  agent.py  hyperliquid_client.py  hyperliquid_client_backup.py  hyperliquid_client_old.py  hyperliquid_sdk_client.py  mock_client.py  tools.py
